# Words-Counting

./: CMakeLists.txt  README.md  config.txt  input.txt  input2.txt
headers/: archive_functions.h  helpers.h  word_count.h
results/: result1.txt  result2.txt
sources/: archive_functions.cpp  helpers.cpp  main.cpp  multi_thread_solution.cpp  one_thread_solution.cpp  word_count.cpp
